Updates for 3.4.0, install and ict

--- a/install-admin/concept_ontap_target_releases_supported_by_7mtt.adoc
+++ b/install-admin/concept_ontap_target_releases_supported_by_7mtt.adoc
@@ -8,16 +8,25 @@ summary: 'Release support for ONTAP transition target clusters depends on the tr
 :icons: font
 :imagesdir: ../media/
 
+//
+//update release notes to github link
+//added 3.4.0 row
+//
+
 [.lead]
 Release support for ONTAP transition target clusters depends on the transition method you want to use, copy-based or copy-free, and on the version of the 7-Mode Transition Tool.
 
-Be sure to consult the current 7-Mode Transition Tool link:http://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-72c-rn/home.html[Release Notes] for the latest information about supported target releases and known issues.
+Be sure to consult the current 7-Mode Transition Tool link:http://docs.netapp.com/us-en/ontap-7mode-transition/releasenotes.html[Release Notes] for the latest information about supported target releases and known issues.
 
 Copy-based transitions are supported to these ONTAP target releases.
 
 [options="header"]
 |===
 | If your transition target is running ...| You must use this 7-Mode Transition Tool version ...
+a|
+ONTAP 9.9.1 or earlier supported release
+a|
+3.4.0
 a|
 ONTAP 9.8 or earlier supported release
 a|
