--- a/inventory-collect/concept_where_to_find_information_about_transition_assessment.adoc
+++ b/inventory-collect/concept_where_to_find_information_about_transition_assessment.adoc
@@ -9,4 +9,4 @@ summary: 'You can find information about assessing storage systems, hosts, and h
 :imagesdir: ../media/
 
 [.lead]
-You can find information about assessing storage systems, hosts, and host applications to verify that they are ready for transition in the link:https://review.docs.netapp.com/us-en/ontap-7mode-transition_catalyst-adoc/copy-based/index.html[7-Mode Transition Tool Copy-Based Transition Guide]. The guide provides details about how to import the inventory report you created for controllers and hosts and how to assess these controllers and hosts to verify that they are ready for transition.
+You can find information about assessing storage systems, hosts, and host applications to verify that they are ready for transition in the link:http://docs.netapp.com/us-en/ontap-7mode-transition/copy-based/index.html[7-Mode Transition Tool Copy-Based Transition Guide]. The guide provides details about how to import the inventory report you created for controllers and hosts and how to assess these controllers and hosts to verify that they are ready for transition.
