--- a/san-host/task_preparing_for_transition_of_esxi_hosts.adoc
+++ b/san-host/task_preparing_for_transition_of_esxi_hosts.adoc
@@ -8,11 +8,15 @@ summary: 'You must complete several prerequisite tasks before you use the 7-Mode
 :icons: font
 :imagesdir: ../media/
 
+//
+//Fix copy based/free links
+//
+
 [.lead]
 You must complete several prerequisite tasks before you use the 7-Mode Transition Tool (7MTT) to transition your ESXi hosts from Data ONTAP operating in 7-Mode to ONTAP.
 
 .Steps
-. Configure clustered Data ONTAP as described in the link:https://review.docs.netapp.com/us-en/ontap-7mode-transition_catalyst-adoc/copy-based/index.html[7-Mode Transition Tool Copy-Based Transition Guide] or the link:https://review.docs.netapp.com/us-en/ontap-7mode-transition_catalyst-adoc/copy-free/index.html[7-Mode Transition Tool Copy-Free Transition Guide] based on the type of transition that you are performing.
+. Configure clustered Data ONTAP as described in the link:http://docs.netapp.com/us-en/ontap-7mode-transition/copy-based/index.html[7-Mode Transition Tool Copy-Based Transition Guide] or the link:https://docs.netapp.com/us-en/ontap-7mode-transition/copy-free/index.html[7-Mode Transition Tool Copy-Free Transition Guide] based on the type of transition that you are performing.
 . Gather the following information for the ESXi hosts that you are transitioning:
  ** IP address
  ** Host name
