--- a/copy-free/concept_restrictions_for_copy_free_transition.adoc
+++ b/copy-free/concept_restrictions_for_copy_free_transition.adoc
@@ -8,6 +8,10 @@ summary: 'You must be aware of certain restrictions for transitioning 7-Mode agg
 :icons: font
 :imagesdir: ../media/
 
+//
+//update snaplock bullet in volume types as per BURT 1390606
+//
+
 [.lead]
 You must be aware of certain restrictions for transitioning 7-Mode aggregates and volumes. Some of the restrictions are due to features that are not supported in ONTAP. For some restrictions, you can perform a corrective action that enables you to continue with the transition.
 
@@ -23,7 +27,7 @@ http://www.netapp.com/us/media/tr-4052.pdf[NetApp Technical Report 4052: Success
 
 * SnapLock volumes
 +
-The transition of SnapLock volumes is supported to ONTAP releases 9.0 through 9.5.
+The transition of SnapLock volumes is supported for all of the latest ONTAP releases.
 
 * FlexCache volumes
 
