--- a/snapmirror/task_transitioning_7_mode_primary_as_a_standalone_volume.adoc
+++ b/snapmirror/task_transitioning_7_mode_primary_as_a_standalone_volume.adoc
@@ -135,7 +135,7 @@ cluster1::> snapmirror show -destination-path vs1:dst_vol
          Total Transfer Time in Seconds: 11
 ----
 
-  ... Go to link:task_transitioning_a_stand_alone_volume.md#STEP_33254BEE7D2648F0A9C08FF48CF8E0F3[3].
+  ... Go to link:task_transitioning_a_stand_alone_volume.html[step 3].
 
 a|
 Perform scheduled update transfers
