--- a/install-admin/concept_installing_and_uninstalling_7mtt.adoc
+++ b/install-admin/concept_installing_and_uninstalling_7mtt.adoc
@@ -11,10 +11,11 @@ summary: 'You can download and install the 7-Mode Transition Tool on a Windows s
 [.lead]
 You can download and install the 7-Mode Transition Tool on a Windows system by using the standard wizard-based installer. However, if you have a previously installed version of the 7-Mode Transition Tool, you need to be aware of certain prerequisites before doing so.
 
-* If you have a 7-Mode Transition Tool version earlier than 3.0 installed in your system, then you need to uninstall that 7-Mode Transition Tool before installing 7-Mode Transition Tool 3.3.
+* If you have a 7-Mode Transition Tool version earlier than 3.0 installed in your system, then you need to uninstall that before installing the latest version.
 +
 You must create a backup of the log files if you choose to retain the log files during uninstallation. The 7-Mode Transition Tool installer installs the tool to the same folder and overwrites the log files the next time you run it.
 
-* If you have 7-Mode Transition Tool 3.0 or later installed in your system, then the following conditions must be met before installing 7-Mode Transition Tool 3.3:
+* If you have 7-Mode Transition Tool 3.0 or later installed in your system, then the following conditions must be met before installing the latest version of the 7-Mode Transition Tool:
  ** All existing copy-based transition projects must either be completed or aborted.
  ** All existing copy-free transition projects must either be completed or rollback complete.
+//mairead 7mtt 3.5.0 29june2022
