--- a/copy-based/concept_requirements_for_copy_based_transition.adoc
+++ b/copy-based/concept_requirements_for_copy_based_transition.adoc
@@ -23,6 +23,10 @@ Copy-based transitions are supported to these ONTAP target releases.
 |===
 | If your transition target is running ...| You must use this 7-Mode Transition Tool version ...
 a|
+ONTAP 9.10.1, ONTAP 9.11.1 or earlier supported releases
+a|
+3.5.0
+a|
 ONTAP 9.8 or earlier supported releases
 a|
 3.3.3
