--- a/copy-free/concept_transition_overview.adoc
+++ b/copy-free/concept_transition_overview.adoc
@@ -13,7 +13,7 @@ Transitioning to clustered ONTAP involves identifying your current environment, 
 
 Be sure to consult the current 7-Mode Transition Tool _Release Notes_ for the latest information about supported target releases and known issues.
 
-http://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-72c-rn/home.html[7-Mode Transition Tool Release Notes]
+link:https://docs.netapp.com/us-en/ontap-7mode-transition/releasenotes.html[7-Mode Transition Tool Release Notes]
 
 You must first collect information about the current environment, including both the current storage environment as well as the hosts and applications. After collecting the storage inventory, you can assess the current features and functionality that are used and identify any differences in the ONTAP version selected. You can use 7-Mode Transition Tool to perform these tasks.
 
@@ -24,3 +24,4 @@ Implementation includes deploying and configuring the cluster, migrating data, a
 *Related information*
 
 http://docs.netapp.com/ontap-9/index.jsp[NetApp Documentation: ONTAP 9]
+//link updated for 7mtt 3.5.0 BURT 1484474 Mairead July 2022
