--- a/snapmirror/concept_guidelines_for_transitioning_snaplock_volumes.adoc
+++ b/snapmirror/concept_guidelines_for_transitioning_snaplock_volumes.adoc
@@ -12,8 +12,8 @@ summary: 'You can transition 7-Mode SnapLock volumes to SnapLock volumes created
 You can transition 7-Mode SnapLock volumes to SnapLock volumes created in ONTAP 9.5 or earlier. You must be aware of the requirements and guidelines for transitioning SnapLock volumes.
 
 * Transition of 7-Mode SnapLock volumes is not supported if the SnapLock volumes contain LUNs.
-* You can transition 7-Mode SnapLock Enterprise volumes only to SnapLock Enterprise volumes in ONTAP 9.5 or earlier.
-* You can transition 7-Mode SnapLock Compliance volumes only to SnapLock Compliance volumes in ONTAP 9.5 or earlier.
+* You can transition 7-Mode SnapLock Enterprise volumes to SnapLock Enterprise volumes in any ONTAP 9.0 release except 9.6.
+* You can transition 7-Mode SnapLock Compliance volumes only to SnapLock Compliance volumes in any ONTAP 9.0 release except 9.6.
 * When transitioning a 7-Mode volume SnapMirror relationship, you can use staggered transition (transition secondary first and then primary) only for SnapLock Enterprise volumes.
 +
 SnapMirror disaster recovery (DR) relationship between 7-Mode primary volumes and ONTAP secondary volumes is supported only for SnapLock Enterprise volumes, but not for SnapLock Compliance volumes.
@@ -27,3 +27,5 @@ xref:task_transitioning_a_volume_snapmirror_relationship_in_parallel.adoc[Transi
 *Related information*
 
 https://docs.netapp.com/ontap-9/topic/com.netapp.doc.pow-arch-con/home.html[Archive and compliance using SnapLock technology]
+
+// 2023-03-03, GH issue #27
