--- a/snapmirror/concept_guidelines_for_transitioning_snaplock_volumes.adoc
+++ b/snapmirror/concept_guidelines_for_transitioning_snaplock_volumes.adoc
@@ -24,8 +24,14 @@ xref:task_transitioning_a_data_protection_relationship.adoc[Transitioning a volu
 +
 xref:task_transitioning_a_volume_snapmirror_relationship_in_parallel.adoc[Transitioning a volume SnapMirror relationship in parallel]
 
+* Starting with ONTAP 9.10.1, SnapLock and non-SnapLock volumes can be created in the same aggregate. 
++
+You must add a flag during volume creation to state the volume should be SnapLock because 7-Mode Transition does not pass on the `-snaplock-type` flag when it creates the new volume. As a result, all 7-Mode SnapLock migrations starting with ONTAP 9.10.1, result in a failed SnapMirror baseline. 
+
+
 *Related information*
 
 https://docs.netapp.com/ontap-9/topic/com.netapp.doc.pow-arch-con/home.html[Archive and compliance using SnapLock technology]
 
 // 2023-03-03, GH issue #27
+// 2023-03-22, GH issue #27
