--- a/snapmirror/concept_guidelines_for_transitioning_snaplock_volumes.adoc
+++ b/snapmirror/concept_guidelines_for_transitioning_snaplock_volumes.adoc
@@ -9,29 +9,32 @@ summary: 'You can transition 7-Mode SnapLock volumes to SnapLock volumes created
 :imagesdir: ../media/
 
 [.lead]
-You can transition 7-Mode SnapLock volumes to SnapLock volumes created in ONTAP 9.5 or earlier. You must be aware of the requirements and guidelines for transitioning SnapLock volumes.
+To transition 7-Mode SnapLock volumes to ONTAP 9, you must be aware of these requirements and guidelines.
 
 * Transition of 7-Mode SnapLock volumes is not supported if the SnapLock volumes contain LUNs.
-* You can transition 7-Mode SnapLock Enterprise volumes to SnapLock Enterprise volumes in any ONTAP 9.0 release except 9.6.
-* You can transition 7-Mode SnapLock Compliance volumes only to SnapLock Compliance volumes in any ONTAP 9.0 release except 9.6.
+* You can transition 7-Mode SnapLock Enterprise volumes to SnapLock Enterprise volumes in any ONTAP 9.0+ release except 9.6.
+* You can transition 7-Mode SnapLock Compliance volumes only to SnapLock Compliance volumes in any ONTAP 9.0+ release except 9.6.
 * When transitioning a 7-Mode volume SnapMirror relationship, you can use staggered transition (transition secondary first and then primary) only for SnapLock Enterprise volumes.
 +
 SnapMirror disaster recovery (DR) relationship between 7-Mode primary volumes and ONTAP secondary volumes is supported only for SnapLock Enterprise volumes, but not for SnapLock Compliance volumes.
 +
-xref:task_transitioning_a_data_protection_relationship.adoc[Transitioning a volume SnapMirror relationship in a staggered configuration]
+xref:task_transitioning_a_data_protection_relationship.adoc[Transitioning a volume SnapMirror relationship in a staggered configuration^]
 
 * You must transition a 7-Mode volume SnapMirror relationship between SnapLock Compliance volumes by transitioning the primary and secondary volumes in parallel.
 +
-xref:task_transitioning_a_volume_snapmirror_relationship_in_parallel.adoc[Transitioning a volume SnapMirror relationship in parallel]
+xref:task_transitioning_a_volume_snapmirror_relationship_in_parallel.adoc[Transitioning a volume SnapMirror relationship in parallel^]
 
-* Starting with ONTAP 9.10.1, SnapLock and non-SnapLock volumes can be created in the same aggregate. 
+* Starting with ONTAP 9.10.1, SnapLock and non-SnapLock volumes can be created in the same aggregate.
 +
-You must add a flag during volume creation to state the volume should be SnapLock because 7-Mode Transition does not pass on the `-snaplock-type` flag when it creates the new volume. As a result, all 7-Mode SnapLock migrations starting with ONTAP 9.10.1, result in a failed SnapMirror baseline. 
+To transition 7-Mode SnapLock volumes to ONTAP 9.10.1+, the ONTAP volumes must be created manually with the `-snaplock-type {non-snaplock|compliance|enterprise}` flag. After manual volume creation, manage the transition with The 7-Mode Transition Tool.
++
+If the 7-Mode Transition Tool creates the volume on ONTAP 9.10.1+, the volume is not created as a SnapLock volume and this results in a failed SnapMirror baseline.
 
 
 *Related information*
 
-https://docs.netapp.com/ontap-9/topic/com.netapp.doc.pow-arch-con/home.html[Archive and compliance using SnapLock technology]
+https://docs.netapp.com/ontap-9/topic/com.netapp.doc.pow-arch-con/home.html[Archive and compliance using SnapLock technology^]
 
 // 2023-03-03, GH issue #27
 // 2023-03-22, GH issue #27
+// 2023-03-30, GH issue #27
