--- a/copy-based/concept_san_transition_supported_and_unsupported_configurations_and_required_manual_steps.adoc
+++ b/copy-based/concept_san_transition_supported_and_unsupported_configurations_and_required_manual_steps.adoc
@@ -78,6 +78,6 @@ You must manually configure igroups that are bound to a portset after transition
 
 https://docs.netapp.com/ontap-9/topic/com.netapp.doc.cdot-famg-nfs/home.html[NFS management]
 
-https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-nmg/home.html[Network and LIF management/ONTAP 9.7 and earlier]
+https://docs.netapp.com/us-en/ontap/networking/index.html[Network and LIF management]
 
-https://docs.netapp.com/us-en/ontap/networking/index.html[Network and LIF management/ONTAP 9.8 and later]
+// 2023-05-12, GH issue #32
