--- a/copy-based/task_preparing_cluster_for_transition.adoc
+++ b/copy-based/task_preparing_cluster_for_transition.adoc
@@ -134,4 +134,6 @@ system7mode is alive
 +
 For multipathing, you must have two intercluster LIFs on each node.
 +
-https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-nmg/home.html[Network and LIF management]
+https://docs.netapp.com/us-en/ontap/networking/index.html[Network and LIF management]
+
+// 2023-05-12, GH issue #32
