--- a/copy-based/task_preparing_network_for_transition.adoc
+++ b/copy-based/task_preparing_network_for_transition.adoc
@@ -34,4 +34,6 @@ NOTE: IPv6 addresses cannot be transitioned and must be configured manually post
 
 *Related information*
 
-https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-nmg/home.html[Network and LIF management]
+https://docs.netapp.com/us-en/ontap/networking/index.html[Network and LIF management]
+
+// 2023-05-12, GH issue #32
