--- a/index.adoc
+++ b/index.adoc
@@ -1,5 +1,5 @@
 ---
-layout: astra
+layout: landing-page
 sidebar: sidebar
 permalink: index.html
 lead: The 7-Mode Transition documentation includes information to help you install and setup the 7-Mode Transition Tool, transition data using SnapMirror commands, perform a copy-base or copy-free transition, collect information for transition, and complete pre- and post transition procedures for SAN hosts.
