addressed TR links update

--- a/copy-based/task_transitioning_to_clustered_ontap_8_3_from_a_7_mode_version_with_32_bit_data.adoc
+++ b/copy-based/task_transitioning_to_clustered_ontap_8_3_from_a_7_mode_version_with_32_bit_data.adoc
@@ -19,4 +19,4 @@ image::../media/32bit_upgrade_path_updated.gif[]
 
 *Related information*
 
-http://www.netapp.com/us/media/tr-3978.pdf[NetApp Technical Report 3978: In-Place Expansion of 32-Bit Aggregates to 64-Bit Overview and Best Practices]
+https://www.netapp.com/pdf.html?item=/media/19679-tr-3978.pdf[NetApp Technical Report 3978: In-Place Expansion of 32-Bit Aggregates to 64-Bit Overview and Best Practices^]
