--- a/copy-free/concept_how_nfs_exports_are_transitioned.adoc
+++ b/copy-free/concept_how_nfs_exports_are_transitioned.adoc
@@ -31,7 +31,7 @@ For NFS clients to mount qtrees, the qtrees must belong to a volume that has rea
 
 * If the same host is specified in the combination of read-only, read-write, and root access permission lists, you must evaluate the transitioned export rules after transition to determine appropriate access privilege for the hosts.
 
-http://www.netapp.com/us/media/tr-4067.pdf[NetApp Technical Report 4067: NFS Best Practice and Implementation Guide]
+https://www.netapp.com/pdf.html?item=/media/10720-tr-4067.pdf[NetApp Technical Report 4067: NFS Best Practice and Implementation Guide^]
 
 == Example: Modifying the export policy of a volume to allow access to a qtree
 
