--- a/copy-free/concept_restrictions_for_copy_free_transition.adoc
+++ b/copy-free/concept_restrictions_for_copy_free_transition.adoc
@@ -23,7 +23,7 @@ The following types of volumes are not supported for transition:
 +
 You can use host-based transition methods to transition traditional volumes.
 +
-http://www.netapp.com/us/media/tr-4052.pdf[NetApp Technical Report 4052: Successfully Transitioning to Clustered Data ONTAP (Data ONTAP 8.2.x and 8.3)]
+https://www.netapp.com/pdf.html?item=/media/19510-tr-4052.pdf[NetApp Technical Report 4052: Successfully Transitioning to Clustered Data ONTAP (Data ONTAP 8.2.x and 8.3)^]
 
 * SnapLock volumes
 +
