--- a/snapmirror/concept_planning_for_transition.adoc
+++ b/snapmirror/concept_planning_for_transition.adoc
@@ -13,7 +13,7 @@ Before copying data from 7-Mode volumes to clustered ONTAP volumes, you must und
 
 You should review the _Release Notes_ for the transition target release in case there are any transition issues.
 
-https://library.netapp.com/ecmdocs/ECMLP2492508/html/frameset.html[ONTAP 9 Release Notes]
+https://library.netapp.com/ecm/ecm_get_file/ECMLP2492508[ONTAP 9 Release Notes]
 
 SnapMirror relationships between 7-Mode and clustered ONTAP volumes are supported in the following releases:
 
